# ml-rfm-clustering

./: .gitignore  README.md  pyproject.toml
data/processed/: data_for_rfm.csv  report.csv  rfm_kmeans.csv  rfm_standard.csv
data/raw/: Report 1.csv  Report 2.csv  Report 5.csv  report.csv
notebooks/: 1.0-eda.ipynb  2.0-rfm_default.ipynb  3.0-rfm_with_kmeans.ipynb
notebooks/.ipynb_checkpoints/: 1.0-eda-checkpoint.ipynb
reports/: Segmentação de dados de venda de e-commerce com RFM.docx  report.html
resources/: report.html
