[tool.poetry]
name = "ml-rfm-clustering"
version = "0.1.0"
description = ""
authors = ["ewerthonk <kutz.ewerthon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.26.0"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
sweetviz = "^2.3.1"
klib = "^1.3.2"
matplotlib = "^3.9.2"
dython = "^0.7.8"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
skimpy = "^0.0.15"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
