[tool.poetry]
name = "ml-rfm-clustering"
version = "0.1.0"
description = ""
authors = ["ewerthonk <kutz.ewerthon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.26.0"
ipykernel = "^6.29.5"
sweetviz = "^2.3.1"
klib = "^1.3.2"
matplotlib = "^3.9.2"
dython = "^0.7.8"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
skimpy = "^0.0.15"
seaborn = "^0.13.2"
notebook = "6"
rise = "^5.7.1"
jupyter-nbextensions-configurator = "^0.6.4"
plotly = "^5.24.1"
yellowbrick = "^1.5"
feature-engine = "^1.8.2"
scikit-learn = "1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
